Fix search button on small screens

--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -146,13 +146,15 @@ ol {
   width: 50px;
 }
 
+@media only screen and (max-width: 420px) {
+  .clearbtn {
+    display: none;
+  }
+}
+
 #searchterm {
   width: auto;
   min-width: 200px;
-}
-
-@media only screen and (max width: 420px) {
-
 }
 
 .cover {
